--- a/src/View/Admin/Article/edit.html.twig
+++ b/src/View/Admin/Article/edit.html.twig
@@ -1,15 +1,12 @@
 {% extends 'Admin/adminLayout.html.twig' %}
-{% block stylesheet %}<link rel="stylesheet" href="/assets/css/admin/adminArticle.css">{% endblock %}
-{% block title %}Article édition{% endblock %}
+{% block title %} Update article {% endblock %}
+{% block stylesheet %}
+    <link rel="stylesheet" href="/assets/css/admin/adminArticle.css">
+{% endblock %}
 {% block content %}
 <main>
-    <h1>Edition de l'article : </h1>
-    <h2>{{articleUpdate.articleTitle}}</h3>
+    <h1>Edition de l'article : {{articleUpdate.articleTitle}} </h1>
     {% include 'Admin/components/_form_articleUpdate.html.twig' %}
 </main>
 
-{% endblock %}
-{% block javascript %}
-    <script src="/assets/js/admin/adminArticles.js"></script>
-    <script src="/assets/js/admin/updateForm.js"></script>
 {% endblock %}
