--- a/src/View/Admin/components/_form_articleUpdate.html.twig
+++ b/src/View/Admin/components/_form_articleUpdate.html.twig
@@ -9,7 +9,7 @@
         <input type="hidden" name="imgSrc" value="{{articleUpdate.imgSrc}}"/>
 		<div class="articleTitle">
 			<label for="title">Titre de votre article</label>
-			<input type="text" name="title" id="title" required value="{{articleUpdate.articleTitle}}"/>
+			<input type="text" name="articleTitle" id="title" required value="{{articleUpdate.articleTitle}}"/>
 		</div>
 		<div>
 			<label for="hometitle">Titre de votre article depuis la home</label>
@@ -31,8 +31,8 @@
 			<textarea id="detail" rows="10" name="detail" required>{{articleUpdate.detail}}</textarea>
 		</div>
 		<div>
-			<label for="homepreview">Courte description de votre article pour la home</label>
-			<textarea id="homepreview" rows="10" name="homePreview" required>{{articleUpdate.homepreview}}</textarea>
+			<label for="homePreview">Courte description de votre article pour la home</label>
+			<textarea id="homePreview" rows="10" name="homePreview" required>{{articleUpdate.homePreview}}</textarea>
 		</div>
 		<div class="blockSelect">
             <div class="blockCategory">
