--- a/public/assets/css/admin/adminArticle.css
+++ b/public/assets/css/admin/adminArticle.css
@@ -2,8 +2,8 @@ main {
     min-width: 30rem;
     margin: 0 auto;
     max-width: 70rem;
-    width: auto; 
-}   
+    width: auto;
+}
 
 h1 {
     margin-top: 30px;
@@ -16,7 +16,7 @@ form {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 1500px;   
+    height: 1500px;
 }
 
 .littleInput {
@@ -62,7 +62,7 @@ textarea {
 
 div{
     display: flex;
-    flex-direction: column;  
+    flex-direction: column;
 }
 
 .blockSelect{
@@ -300,4 +300,8 @@ div{
 .modalNoButton:active{
     background: red;
     box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.8) inset;
+}
+
+.error{
+    color: red;
 }
